[package]
name = "bitcoincash-bech32"
version = "0.1.0"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/bitcoincash-bech32"
description = "Encodes and decodes the BitcoinCash's Bech32 format"
readme = "README.md"
keywords = ["base32", "encoding", "bech32", "bitcoincash"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std"]
std = []
# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []

[dependencies]
